# nwnx4_septi_plugins

./: .gitmodules  README.md  meson.build  meson_options.txt  version.bat
src/: Version.rc.in
src/plugins/xp_aspectManager/: appListManagement.cpp  appListManagement.h  aspectManager.cpp  aspectManager.h  aspectManagerUtils.cpp  aspectManagerUtils.h  functionFixes.cpp  functionFixes.h  listeHakZip.ini  manageArea.cpp  manageArea.h  manageCreature.cpp  manageCreature.h  manageItem.cpp  manageItem.h  manageLight.cpp  manageLight.h  manageObject.cpp  manageObject.h  meson.build  messageManagement.cpp  messageManagement.h  nwnx_aspectmanager.nss  nwnx_aspectmanager_area.nss  nwnx_aspectmanager_creature.nss  nwnx_aspectmanager_item.nss  nwnx_aspectmanager_light.nss  nwnx_aspectmanager_list.nss  nwnx_aspectmanager_old.nss  objectSpatial.cpp  objectSpatial.h  refreshObject.cpp  refreshObject.h  scanAndAnalyseFile.cpp  xp_aspectManager.ini
src/plugins/xp_aspectManager/nssdocumentation/: aspectmanager_pdf.md  full_nwnxaspectmanager.md  nwnx_aspectmanager.md  nwnx_aspectmanager_area.md  nwnx_aspectmanager_creature.md  nwnx_aspectmanager_item.md  nwnx_aspectmanager_light.md
src/plugins/xp_enhancedFeatures/: AutoActiveModeDefinition.cpp  AutoActiveModeDefinition.h  BonusParser.cpp  BonusParser.h  EnhancedFeatures.cpp  EnhancedFeatures.h  HPFeats.cpp  HitPointFeatsEFF.ini  HpFeats.h  MagicFunctions.cpp  MagicFunctions.h  ReduceSpeedEFF.ini  ReduceSpeedHook.cpp  ReduceSpeedHook.h  RuleCreatureFct.cpp  RuleCreatureFct.h  RuleParser.cpp  RuleParser.h  SkillFeatsEFF.ini  SkillHooks.cpp  SkillHooks.h  SmallHookFunctions.cpp  SmallHookFunctions.h  SmallPatchFunctions.cpp  SmallPatchFunctions.h  SpeedFeats.cpp  SpeedFeats.h  SpeedFeatsEFF.ini  SpeedHook.cpp  SpeedHook.h  StoreRetrievePatch.cpp  StoreRetrievePatch.h  TalkFunctions.cpp  TalkFunctions.h  TimeFeatures.cpp  TimeFeatures.h  WeaponFinesseEFF.ini  WeaponFinesseHook.cpp  WeaponFinesseHook.h  meson.build  (+9 more)
src/plugins/xp_msgServer/: Anticheat.cpp  Anticheat.h  Connection.cpp  Connection.h  gui_sept_heimdall_demo.NSS  meson.build  messageConst.h  nwnx_msgServer.nss  playerIDManager.cpp  playerIDManager.h  sept_anticheat_creation.NSS  sept_anticheat_levelup.NSS  sept_heimdall_demo_autoconnect.NSS  sept_heimdall_demo_connect.NSS  sept_heimdall_demo_login.xml  sept_heimdall_demo_onconnect.NSS  xp_msgServer.def  xp_msgServer.ini
src/plugins/xp_threadSynchro/: ThreadSynchroMain.cpp  ThreadSynchroMain.h  ThreadSynchronisation.cpp  ThreadSynchronisation.h  meson.build  xp_threadSynchro.ini
src/septutil/: NwN2DataPos.h  NwN2Utilities.cpp  NwN2Utilities.h  bytearray.h  crypto.cpp  crypto.h  httplib.h  intern2daMgt.cpp  intern2daMgt.h  mini.h  scriptManagement.h  srvadmin.cpp  srvadmin.h  win_utils.cpp  win_utils.h
